deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-template
spec:
  selector:
    app: nextjs-template
  ports:
    - port: 80
      targetPort: 3000
