deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-template-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nextjs-template.mydormroom.com
        - nextjs-template.mydormroom.dpdns.org
      secretName: mydormroom-tls
  rules:
    - host: nextjs-template.mydormroom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-template
                port:
                  number: 80
    - host: nextjs-template.mydormroom.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-template
                port:
                  number: 80
